# astracore-neo

./: .dockerignore  .gitignore  Dockerfile  LEADERBOARD.md  LICENSE  PLAN.md  README.md  install_verilator.sh  pyproject.toml  pytest.ini  requirements.txt  run_all_sims.sh  run_sim.py  run_verilator_integration.sh
asic/: config.json  config_aeb_controller.yaml  config_astracore_fusion_top.yaml  config_cam_detection_receiver.yaml  config_can_odometry_decoder.yaml  config_canfd_controller.yaml  config_coord_transform.yaml  config_det_arbiter.yaml  config_dms_fusion.yaml  config_ecc_secded.yaml  config_ego_motion_estimator.yaml  config_ethernet_controller.yaml  config_fault_predictor.yaml  config_gaze_tracker.yaml  config_gnss_interface.yaml  config_head_pose_tracker.yaml  config_imu_interface.yaml  config_inference_runtime.yaml  config_lane_fusion.yaml  config_ldw_lka_controller.yaml  config_lidar_interface.yaml  config_mac_array.yaml  config_mipi_csi2_rx.yaml  config_object_tracker.yaml  config_pcie_controller.yaml  config_plausibility_checker.yaml  config_ptp_clock_sync.yaml  config_radar_interface.yaml  config_safe_state_controller.yaml  config_sensor_sync.yaml  config_thermal_zone.yaml  config_tmr_voter.yaml  config_ttc_calculator.yaml  config_ultrasonic_interface.yaml  gen_fusion_configs.py
astracore/: __init__.py  apply.py  backend.py  benchmark.py  cli.py  config.py  mlperf.py  multistream.py  quantise.py  quantiser.py  registry.py  zoo.py
constraints/: astracore_fusion_top.xdc
cpp/: README.md  build.sh  setup.py
docs/: architecture.md  astracore_neo_complete_guide.md  astracore_v2_npu_architecture.md  audit_fixes_applied.md  best_in_class_design.md  buyer_dd_findings_2026_04_19.md  cloud_readiness_playbook.md  compute.md  connectivity.md  customer_integration_guide.md  dms.md  external_validation_options.md  f1_a1_rtl_spec.md  f1_a4_rtl_spec.md  hal.md  independent_audit.md  index.md  inference.md  investor_brief.md  memory.md  models.md  perception.md  results_summary.md  rtl_canfd_controller.md  rtl_ecc_secded.md  rtl_ethernet_controller.md  rtl_fault_predictor.md  rtl_gaze_tracker.md  rtl_head_pose_tracker.md  rtl_inference_runtime.md  rtl_mac_array.md  rtl_pcie_controller.md  rtl_thermal_zone.md  rtl_tmr_voter.md  safety.md  security.md  sensor_fusion_architecture.md  software_first_execution_plan.md  spec_sheet_final_report.md  spec_sheet_provenance.md  (+4 more)
examples/: tier1_adas.yaml  tier1_custom_dataset.py  ultrasonic_proximity_alarm.py
reports/: README.md  demo_results.json  demo_results.md  int2_baseline.json  leaderboard.json  leaderboard_reproduce.md  model_zoo_matrix.json  model_zoo_matrix.md  multistream.json  multistream.md  multistream_zoo.json  multistream_zoo.md  pruning_accuracy.json  replay_result.json  yolov8n_eval.json  yolov8n_eval_100cal_maxabs.json  yolov8n_eval_100cal_pct9999.json  yolov8n_eval_100cal_pct99999.json  yolov8n_eval_100cal_pct999999.json
scripts/: ai_model_deep_tests.py  bench_multistream_zoo.py  bench_zoo_detailed.py  compare_calibration_methods.py  eval_pruning_accuracy.py  export_yolov8n_onnx.py  fetch_model_zoo.py  fetch_yolo_calibration.py  (+11 more)
(+472 files in other folders)
